Tried some parsing...

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,4 +1,10 @@
 input {
+	file {
+		type => "tas"
+		path => "/usr/share/logstash/logfiles/logfile.log"
+		start_position => beginning
+		tags => ["biest"]
+	}
 	tcp {
 		port => 5000
 	}
