Dissect filter added.

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -11,6 +11,13 @@ input {
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+ dissect {
+   mapping => {
+     "message" => "%{timestamp->} %{duration} %{client_address} %{cache_result}/%{status_code} %{adrian} %{request_method} %{url} %{user} %{hierarchy_code}/%{server} %{content_type}"
+    }
+  }
+}
 
 output {
 	elasticsearch {
