Grok used and can set hostname

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -12,13 +12,12 @@ input {
 
 ## Add your filters / logstash plugins configuration here
 filter {
- dissect {
-   mapping => {
-     "message" => "%{timestamp->} %{duration} %{client_address} %{cache_result}/%{status_code} %{adrian} %{request_method} %{url} %{user} %{hierarchy_code}/%{server} %{content_type}"
+  grok {
+    match => {
+      "message" => "%{NUMBER:timestamp}%{SPACE}%{GREEDYDATA:rest}"
     }
   }
 }
-
 output {
 	elasticsearch {
 		hosts => "192.168.30.11:9200"
