--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - elasticsearch
   logstash:
     image: docker.elastic.co/logstash/logstash:5.6.5 
+    # In ELK this name will be on field host
+    hostname: ttest2-iac 
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
